Issue: #FT-2358 SubTicket: # Component: Changes: 1. The bottom line of the dropdown icon and the left text box should align

--- a/TripfinderWeb/TripfinderWeb/Global/Css/page.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/page.less
@@ -628,6 +628,12 @@ body {
 		bottom: 20px;
 		top: auto;
 	}
+
+	.input-group {
+		button.btn {
+			height: 22px;
+		}
+	}
 }
 
 .k-mobile {
